# freelance-project-tracker

./: .gitignore  README.md  compose.yaml
api/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
api/src/: lib.rs  main.rs
api/src/middleware/: auth.rs
api/src/routes/: mod.rs
api/src/routes/project/: create_project.rs  get_project_list.rs  mod.rs
api/src/routes/project/todo_list/: get_todo_list.rs  mod.rs  update_todo_list.rs
api/src/routes/user/: create_user.rs  get_user.rs  login_user.rs  mod.rs  set_avatar.rs
api/tests/: create_user.rs  database_names.rs
client/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
client/src/: index.css  main.tsx
client/src/components/account/: component.tsx  style.module.css
client/src/components/header/: component.tsx  style.module.css
client/src/components/project-list/: component.tsx  style.module.css
client/src/components/project-list/new-project-button/: component.tsx  style.module.css
client/src/components/project-list/project/: component.tsx  style.module.css
client/src/pages/index/: page.tsx
client/src/pages/root/: page.tsx  style.module.css
client/src/pages/sign-in/: page.tsx
client/src/pages/sign-up/: page.tsx  style.module.css
