[package]
name = "freelance-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["headers"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4"
reqwest = { version = "0.11", features =  ["json"]}
bcrypt = "0.13"
jwt-compact = "0.6.0"
tower-cookies = "0.8.0"
dotenv = "0.15.0"
tower = "0.4.13"
uuid = "1.2.2"
futures = "0.3.25"
